# OpenGLProjectTemplates

./: .gitignore  CMakeCPack.cmake  CMakeLists.txt  LICENSE  README.adoc  VERSION.hpp.in  _clang-format
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: OpenGLWindow.hpp  State.hpp  UI.hpp  World.hpp
include/gl/: Buffer.hpp  Camera.hpp  Shader.hpp  Vertex.hpp  VertexArray.hpp  common.hpp
include/sdl/: OpenGLWindow.hpp
shaders/: default.frag  default.vert
src/: Buffer.cpp  Camera.cpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Shader.cpp  Shader.hpp  UI.cpp  VertexArray.cpp  World.cpp  common.cpp  main.cpp
src/gl/: Buffer.cpp  Camera.cpp  Shader.cpp  VertexArray.cpp  common.cpp
src/sdl/: OpenGLWindow.cpp
